--- a/stg.cabal
+++ b/stg.cabal
@@ -40,7 +40,9 @@ build-type:          Simple
 
 -- Extra files to be distributed with the package, such as examples or a
 -- README.
-extra-source-files:  README.md
+extra-source-files:  README.md,
+                     src/Lexer.x,
+                     src/Parser.y
 
 -- Constraint on the version of Cabal needed to build this package.
 cabal-version:       >=1.10
@@ -72,6 +74,8 @@ library
 
   -- Base language which the package is written in.
   default-language:    Haskell2010
+  
+  build-tools:         alex, happy
 
 executable stg-exe
   -- .hs or .lhs file containing the Main module.
